# twilio-voice

./: Cargo.toml  bacon.toml  justfile
generate-voices/: Cargo.toml
generate-voices/src/: main.rs
src/: digits.rs  errors.rs  lib.rs  price_type.rs
src/client/: calls.rs  mod.rs  twilio_client.rs
src/twilio/: auth.rs  call_resource.rs  helpers.rs  mod.rs  request.rs
src/twilio/auth/: middleware.rs  mod.rs
src/twiml/: digits.rs  gather.rs  gather_verbs.md  mod.rs  play.rs  redirect.rs  responses.rs  say.rs
src/twiml/voices/: af_za.rs  ar_ae.rs  ar_xa.rs  arb.rs  bg_bg.rs  bn_in.rs  ca_es.rs  cmn_cn.rs  cmn_tw.rs  cs_cz.rs  cy_gb.rs  da_dk.rs  de_at.rs  de_de.rs  el_gr.rs  en_au.rs  en_gb.rs  en_gb_wls.rs  en_ie.rs  en_in.rs  en_nz.rs  en_us.rs  en_za.rs  es_es.rs  es_mx.rs  es_us.rs  eu_es.rs  fi_fi.rs  fil_ph.rs  fr_be.rs  fr_ca.rs  fr_fr.rs  gl_es.rs  gu_in.rs  he_il.rs  hi_in.rs  hu_hu.rs  id_id.rs  is_is.rs  it_it.rs  (+27 more)
