[workspace]
members = [".", "generate-voices"]

[package]
name = "twilio-voice"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
futures = "0.3.31"
hmac = "0.12.1"
quick-xml = { version = "0.37.5", features = [
    "serde-types",
    "serialize",
] }
serde = { version = "1.0.219", features = [
    "derive",
] }
serde_urlencoded = "0.7.1"
serde_with = "3.12.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
strum = { version = "0.27.1", features = [
    "derive",
] }
thiserror = "2.0.12"
typed-builder = "0.21.0"
url = "2.5.4"

[features]
default = ["en"]
all = [
    "af-za",
    "ar-ae",
    "ar-xa",
    "arb",
    "bg-bg",
    "bn-in",
    "ca-es",
    "cmn-cn",
    "cmn-tw",
    "cs-cz",
    "cy-gb",
    "da-dk",
    "de-at",
    "de-de",
    "el-gr",
    "en-au",
    "en-gb-wls",
    "en-gb",
    "en-ie",
    "en-in",
    "en-nz",
    "en-us",
    "en-za",
    "es-es",
    "es-mx",
    "es-us",
    "eu-es",
    "fi-fi",
    "fil-ph",
    "fr-be",
    "fr-ca",
    "fr-fr",
    "gl-es",
    "gu-in",
    "he-il",
    "hi-in",
    "hu-hu",
    "id-id",
    "is-is",
    "it-it",
    "ja-jp",
    "kn-in",
    "ko-kr",
    "lt-lt",
    "lv-lv",
    "ml-in",
    "mr-in",
    "ms-my",
    "nb-no",
    "nl-be",
    "nl-nl",
    "pa-in",
    "pl-pl",
    "pt-br",
    "pt-pt",
    "ro-ro",
    "ru-ru",
    "sk-sk",
    "sv-se",
    "ta-in",
    "te-in",
    "th-th",
    "tr-tr",
    "vi-vn",
    "yue-cn",
    "yue-hk",
]
af-za = []
ar-ae = []
ar-xa = []
arb = []
bg-bg = []
bn-in = []
ca-es = []
cmn = ["cmn-cn", "cmn-tw"]
cmn-cn = []
cmn-tw = []
cs-cz = []
cy-gb = []
da-dk = []
de = ["de-at", "de-de"]
de-at = []
de-de = []
el-gr = []
en = [
    "en-au",
    "en-gb-wls",
    "en-gb",
    "en-ie",
    "en-in",
    "en-nz",
    "en-us",
    "en-za",
]
en-au = []
en-gb-wls = []
en-gb = []
en-ie = []
en-in = []
en-nz = []
en-us = []
en-za = []
es = ["es-es", "es-mx", "es-us"]
es-es = []
es-mx = []
es-us = []
eu-es = []
fi-fi = []
fil-ph = []
fr = ["fr-be", "fr-ca", "fr-fr"]
fr-be = []
fr-ca = []
fr-fr = []
gl-es = []
gu-in = []
he-il = []
hi-in = []
hu-hu = []
id-id = []
is-is = []
it-it = []
ja-jp = []
kn-in = []
ko-kr = []
lt-lt = []
lv-lv = []
ml-in = []
mr-in = []
ms-my = []
nb-no = []
nl = ["nl-be", "nl-nl"]
nl-be = []
nl-nl = []
pa-in = []
pl-pl = []
pt = ["pt-br", "pt-pt"]
pt-br = []
pt-pt = []
ro-ro = []
ru-ru = []
sk-sk = []
sv-se = []
ta-in = []
te-in = []
th-th = []
tr-tr = []
vi-vn = []
yue = ["yue-cn", "yue-hk"]
yue-cn = []
yue-hk = []
