[workspace]
members = [".", "generate-voices"]

[package]
name = "twilio-voice"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
axum = { version = "0.8", optional = true }
base64 = "0.22"
bigdecimal = { version = "0.4", optional = true, features = ["serde-json"] }
bytes = { version = "1.10", optional = true }
form_urlencoded = { version = "1.2", optional = true }
futures = "0.3"
futures-util = { version = "0.3", optional = true }
hmac = "0.13"
http = { version = "1", optional = true, default-features = false }
http-body-util = { version = "0.1", optional = true }
percent-encoding = "2"
# now only using quick-xml for escape/unescape
quick-xml = { version = "0.39" }
rand = "0.10"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, optional = true, features = ["charset", "json", "rustls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8"
serde_json = "1"
serde_plain = "1"
serde_urlencoded = "0.7"
serde_with = "3"
sha1 = "0.11"
sha2 = "0.11"
ssml-parser = "0.1"
struct-field-names-as-array = "0.3"
strum = { version = "0.28", features = ["derive"] }
subtle = "2"
thiserror = "2"
tower = { version = "0.5", optional = true }
tracing = "0.1"
typed-builder = "0.23"
url = "2"

[features]
default = ["en"]
axum = ["dep:axum"]
bigdecimal = ["dep:bigdecimal"]
middleware = [
    "axum",
    "dep:bytes",
    "dep:futures-util",
    "dep:http",
    "dep:http-body-util",
    "dep:tower",
]
client = ["dep:reqwest", "dep:form_urlencoded", "dep:http"]
all = [
    "af-za",
    "ar-ae",
    "ar-xa",
    "arb",
    "bg-bg",
    "bn-in",
    "ca-es",
    "cmn-cn",
    "cmn-tw",
    "cs-cz",
    "cy-gb",
    "da-dk",
    "de-at",
    "de-de",
    "el-gr",
    "en-au",
    "en-gb-wls",
    "en-gb",
    "en-ie",
    "en-in",
    "en-nz",
    "en-us",
    "en-za",
    "es-es",
    "es-mx",
    "es-us",
    "eu-es",
    "fi-fi",
    "fil-ph",
    "fr-be",
    "fr-ca",
    "fr-fr",
    "gl-es",
    "gu-in",
    "he-il",
    "hi-in",
    "hu-hu",
    "id-id",
    "is-is",
    "it-it",
    "ja-jp",
    "kn-in",
    "ko-kr",
    "lt-lt",
    "lv-lv",
    "ml-in",
    "mr-in",
    "ms-my",
    "nb-no",
    "nl-be",
    "nl-nl",
    "pa-in",
    "pl-pl",
    "pt-br",
    "pt-pt",
    "ro-ro",
    "ru-ru",
    "sk-sk",
    "sv-se",
    "ta-in",
    "te-in",
    "th-th",
    "tr-tr",
    "vi-vn",
    "yue-cn",
    "yue-hk",
]
af-za = []
ar-ae = []
ar-xa = []
arb = []
bg-bg = []
bn-in = []
ca-es = []
cmn = ["cmn-cn", "cmn-tw"]
cmn-cn = []
cmn-tw = []
cs-cz = []
cy-gb = []
da-dk = []
de = ["de-at", "de-de"]
de-at = []
de-de = []
el-gr = []
en = [
    "en-au",
    "en-gb-wls",
    "en-gb",
    "en-ie",
    "en-in",
    "en-nz",
    "en-us",
    "en-za",
]
en-au = []
en-gb-wls = []
en-gb = []
en-ie = []
en-in = []
en-nz = []
en-us = []
en-za = []
es = ["es-es", "es-mx", "es-us"]
es-es = []
es-mx = []
es-us = []
eu-es = []
fi-fi = []
fil-ph = []
fr = ["fr-be", "fr-ca", "fr-fr"]
fr-be = []
fr-ca = []
fr-fr = []
gl-es = []
gu-in = []
he-il = []
hi-in = []
hu-hu = []
id-id = []
is-is = []
it-it = []
ja-jp = []
kn-in = []
ko-kr = []
lt-lt = []
lv-lv = []
ml-in = []
mr-in = []
ms-my = []
nb-no = []
nl = ["nl-be", "nl-nl"]
nl-be = []
nl-nl = []
pa-in = []
pl-pl = []
pt = ["pt-br", "pt-pt"]
pt-br = []
pt-pt = []
ro-ro = []
ru-ru = []
sk-sk = []
sv-se = []
ta-in = []
te-in = []
th-th = []
tr-tr = []
vi-vn = []
yue = ["yue-cn", "yue-hk"]
yue-cn = []
yue-hk = []
